// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should configure a unique rule correctly (prod) 1`] = `
Object {
  "loader": "<PROJECT_ROOT>/node_modules/url-loader/dist/cjs.js",
  "options": Object {
    "emitFile": false,
    "limit": 0,
    "name": "playback/[name].[contenthash:20].[ext]",
    "outputPath": "static/chunks/media",
    "publicPath": "/_next/static/chunks/media",
  },
  "test": /\\\\\\.\\(mp3\\|flac\\|wav\\|aac\\|ogg\\|oga\\|mp4\\|m4a\\|webm\\|ogv\\)\\$/,
}
`;

exports[`should configure a unique rule correctly 1`] = `
Object {
  "loader": "<PROJECT_ROOT>/node_modules/url-loader/dist/cjs.js",
  "options": Object {
    "emitFile": false,
    "limit": 0,
    "name": "[path][name].[ext]",
    "outputPath": "static/chunks/media",
    "publicPath": "/_next/static/chunks/media",
  },
  "test": /\\\\\\.\\(mp3\\|flac\\|wav\\|aac\\|ogg\\|oga\\|mp4\\|m4a\\|webm\\|ogv\\)\\$/,
}
`;
